Dodano newsy na gorze

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">Odliczanie do E8</div>
+    <div class="header">PON: KARTKÓWKA Z MATMY, PRACA KLASOWA Z ANG</div>
     <div class="countdown" id="countdown">00:00:00:00</div>
     <div class="footer">13.05.2025</div>
     <audio id="backgroundMusic" loop autoplay>
@@ -17,9 +17,5 @@
     </audio>
     <script src="script.js"></script>
 
-
-    <script src="script.js"></script>
-</body>
-</html>
 </body>
 </html>
